feat(server): implement stripe payment
