# packages/server/docs/swagger.json
@@ -2287,6 +2287,9 @@
         "internal_handler.checkoutResponse": {
             "type": "object",
             "properties": {
+                "address": {
+                    "$ref": "#/definitions/internal_handler.addressResponse"
+                },
                 "address_id": {
                     "type": "integer"
                 },
@@ -2343,6 +2346,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "image_url": {
+                    "type": "string"
+                },
                 "price_cents": {
                     "type": "integer"
                 },
@@ -2352,8 +2358,14 @@
                 "product_name": {
                     "type": "string"
                 },
+                "product_slug": {
+                    "type": "string"
+                },
                 "quantity": {
                     "type": "integer"
+                },
+                "seller_name": {
+                    "type": "string"
                 },
                 "subtotal_cents": {
                     "type": "integer"
@@ -2363,6 +2375,9 @@
         "internal_handler.orderResponse": {
             "type": "object",
             "properties": {
+                "address": {
+                    "$ref": "#/definitions/internal_handler.addressResponse"
+                },
                 "address_id": {
                     "type": "integer"
                 },
